Add ESP Web Tools buttons

--- a/docs/firmware-updates.mdx
+++ b/docs/firmware-updates.mdx
@@ -31,4 +31,8 @@ You can also factory reset your Upsy Desky with the stock firmware.
 Factory resets will wipe out any configuration or customizations you have performed on your Upsy Desky.
 :::
 
-To do so, head to the [flashing page](https://shop.horner.tj/things/upsy-desky/setup/stock) in a Chromium-based browser and follow the instructions there. It will automatically grab the latest stock firmware from GitHub and flash it to your Upsy Desky.
+To do so, press the blue connect button below in a Chromium-based browser and press "Install Upsy Desky Firmware". It will automatically grab the latest stock firmware from GitHub and flash it to your Upsy Desky.
+
+import EspInstallButton from '@site/src/components/EspInstallButton';
+
+<EspInstallButton />
