Add advanced firmware modification

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -63,6 +63,8 @@ See [Configuration](./configuration/index.md).
 
 Once connected to Home Assistant, you can see the configuration options in the Home Assistant frontend and tailor them to your needs. See [Configuration](./configuration/index.md) for details on what each option does. You will likely need to change them for your specific desk.
 
+More advanced users (or those familiar with ESPHome) can also check out the [advanced guide](./advanced/customization/index.md) on customizing the actual ESPHome config yaml to your liking.
+
 ## Step 4: Connect to Desk
 
 :::note TL;DR
