--- a/docs/firmware-updates.mdx
+++ b/docs/firmware-updates.mdx
@@ -8,6 +8,10 @@ To get the latest features and bug fixes, you will need to update your Upsy Desk
 
 ## ESPHome Dashboard
 
+:::info
+The documentation for [firmware customization](./advanced/customization/index.md) is very relevant here as well.
+:::
+
 This is the recommended way to keep your Upsy Desky up-to-date, and allows you to customize it to your needs by editing the ESPHome config. If you have adopted your Upsy Desky into the dashboard automatically, it will come with a stock config. You can re-compile that configuration at any time to retrieve the latest version.
 
 You can learn how to use the ESPHome Dashboard in their documentation. There is a convenient [Home Assistant addon](https://esphome.io/guides/getting_started_hassio.html) you can use, or you can use a [Docker image](https://esphome.io/guides/getting_started_command_line.html).
