Add note about fast_connect

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -10,6 +10,10 @@ This page will guide you through setting up your new Upsy Desky with your home a
 
 ## Step 1: Connect to Wi-Fi
 
+:::note
+If you have a hidden SSID, you will either need to unhide it, or [adopt your Upsy Desky in the ESPHome dashboard](./advanced/customization/index.md) then add the `fast_connect` option to the `wifi` section of the config YAML. This is unfortunately a limitation with ESPHome.
+:::
+
 Use one of the two below methods to connect your Upsy Desky to Wi-Fi.
 
 import Tabs from '@theme/Tabs';
