--- a/docs/troubleshooting.mdx
+++ b/docs/troubleshooting.mdx
@@ -27,6 +27,19 @@ You can gain more insight into the process by [viewing the logs](#collecting-log
 
 If none of the decoders work, then your desk may use a protocol that is thus-far undiscovered. Please email support@tjhorner.dev and I will work with you to add support for your desk.
 
+### The stock keypad no longer shows the desk's height
+
+This is an issue that can occur on some brands of control box. To address it, follow these steps:
+
+1. Unplug everything from your Upsy Desky.
+2. Connect the control box to your Upsy Desky.
+3. Wait for the Upsy Desky to start up fully (around 10 seconds).
+4. Plug in the keypad.
+
+If these steps don't work, first unuplug your desk then repeat them.
+
+The issue should be fixed until the next time power is lost. If you encounter it again, simply repeat the steps. A permanent fix is in the works, but this workaround will suffice for now. Apologies for the inconvenience!
+
 ### Home Assistant can't connect / `BAD_INDICATOR errno=11`
 
 If Home Assistant can't connect to your Upsy Desky, or you are receiving the error `Reading failed: BAD_INDICATOR errno=11` in the logs, this indicates Home Assistant may be trying to connect with an incorrect encryption key. First, try restarting Home Assistant entirely to see if the issue persists. If it does, here are some things to try based on how you manage your Upsy Desky's firmware updates.
@@ -49,7 +62,7 @@ If you are experiencing other issues, here are some things to try:
 
 If all else fails, please join the [Discord server](https://discord.gg/ZHfXKQrSxF) for support. If necessary, we will work to triage an issue on the GitHub repository.
 
-# Collecting Logs
+## Collecting Logs
 
 If you are experiencing issues with the Upsy Desky, it may be helpful to collect logs from the device. You can collect the logs from the web UI or via serial.
 
