--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -14,14 +14,36 @@ This page will guide you through setting up your new Upsy Desky with your home a
 If you have a hidden SSID, you will either need to unhide it, or [adopt your Upsy Desky in the ESPHome dashboard](./advanced/customization/index.md) then add the `fast_connect` option to the `wifi` section of the config YAML. This is unfortunately a limitation with ESPHome.
 :::
 
-Use one of the two below methods to connect your Upsy Desky to Wi-Fi.
+Use one of the below methods to connect your Upsy Desky to Wi-Fi.
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import EspInstallButton from '@site/src/components/EspInstallButton';
 
 <Tabs>
-  <TabItem value="usb" label="USB (Wired)" default>
+  <TabItem value="ble" label={<><icon icon="fa-brands fa-bluetooth" size="lg"/> Bluetooth</>} default>
+
+If you are using Home Assistant 2023.11 or newer and have a [suitable Bluetooth adapter/proxy set up](https://www.home-assistant.io/integrations/bluetooth/), you can set up your Upsy Desky via Bluetooth.
+
+It's incredibly easy:
+
+1. Plug the Upsy Desky into your desk's control box or USB-C power.
+2. Once powered on, Home Assistant will detect your Upsy Desky and prompt you to connect it to your Wi-Fi network.
+
+If you are having trouble with this method, here are some things to check:
+
+- Ensure your Home Assistant instance has a Bluetooth adapter or proxy set up.
+- Ensure you are running Home Assistant 2023.11 or newer.
+- Ensure the control box is providing power to the Upsy Desky, or you are using the USB-C port for power. A red LED inside the enclosure should be lit.
+
+You can also try setting it up manually with this button if it's not auto-detected:
+
+[![](https://my.home-assistant.io/badges/config_flow_start.svg)](https://my.home-assistant.io/redirect/config_flow_start/?domain=improv_ble)
+
+If all else fails, you can try one of the other setup methods.
+
+  </TabItem>
+  <TabItem value="usb" label={<><icon icon="fa-brands fa-usb" size="lg"/> USB</>}>
 
 1. Connect the Upsy Desky to your computer via USB
 2. Press the blue connect button below
@@ -34,7 +56,7 @@ The Upsy Desky will be listed as either "CP2102 USB to UART Bridge Controller" o
   unsupportedMessage="Provisioning via USB only works in browsers which support Web Serial, such as Chrome or Edge. Please provision your Upsy Desky via Wi-Fi instead." />
 
   </TabItem>
-  <TabItem value="captive-portal" label="Captive Portal (Wireless)">
+  <TabItem value="captive-portal" label={<><icon icon="fa-solid fa-wifi" size="lg"/> Captive Portal (Wi-Fi)</>}>
 
 :::note TL;DR
 Connect to the `upsy-desky-XXXXXX` network (password: `hunter2hunter2`), enter Wi-Fi credentials in captive portal prompt.
