Clarify BLE setup

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -23,6 +23,10 @@ import EspInstallButton from '@site/src/components/EspInstallButton';
 <Tabs>
   <TabItem value="ble" label={<><icon icon="fa-brands fa-bluetooth" size="lg"/> Bluetooth</>} default>
 
+:::info
+This method is supported for firmware version 1.1.2 and newer. Units shipped starting October 31, 2023 will have this version.
+:::
+
 If you are using Home Assistant 2023.11 or newer and have a [suitable Bluetooth adapter/proxy set up](https://www.home-assistant.io/integrations/bluetooth/), you can set up your Upsy Desky via Bluetooth.
 
 It's incredibly easy:
