--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -34,11 +34,12 @@ It's incredibly easy:
 1. Plug the Upsy Desky into your desk's control box or USB-C power.
 2. Once powered on, Home Assistant will detect your Upsy Desky and prompt you to connect it to your Wi-Fi network.
 
-If you are having trouble with this method, here are some things to check:
+If you are having trouble with this method, ensure the following are true:
 
-- Ensure your Home Assistant instance has a Bluetooth adapter or proxy set up.
-- Ensure you are running Home Assistant 2023.11 or newer.
-- Ensure the control box is providing power to the Upsy Desky, or you are using the USB-C port for power. A red LED inside the enclosure should be lit.
+- You are running Home Assistant 2023.11 or newer.
+- Your Upsy Desky is running firmware 1.1.2 or newer, or was shipped after October 31, 2023.
+- Your Home Assistant instance has a Bluetooth adapter or proxy set up.
+- The control box is providing power to the Upsy Desky, or you are using the USB-C port for power. A red LED inside the enclosure should be lit.
 
 You can also try setting it up manually with this button if it's not auto-detected:
 
