Add notes about power delivery and cable quality

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -102,6 +102,10 @@ More advanced users (or those familiar with ESPHome) can also check out the [adv
 
 ## Step 4: Connect to Desk
 
+:::warning
+Make sure to use a short, high-quality cable. In my experience, a 2ft 24 AWG CAT6 cable, such as [this one](https://www.amazon.com/Monoprice-Cat6-Ethernet-Patch-Cable/dp/B002RBECAE) from Monoprice, works great.
+:::
+
 :::note TL;DR
 Plug one RJ45 jack into the control box, and the other into the keypad. Doesn't matter which one is which. Test to see if it works in Home Assistant.
 :::
