Add version terminology clarification

--- a/docs/updates/how-to-update.mdx
+++ b/docs/updates/how-to-update.mdx
@@ -1,15 +1,11 @@
----
-sidebar_position: 1.9
----
-
-# Firmware Updates
+# Update Methods
 
 To get the latest features and bug fixes, you will need to update your Upsy Desky's firmware. There are a few ways to do this, and we will go over each of them.
 
 ## ESPHome Dashboard
 
 :::info
-The documentation for [firmware customization](./advanced/customization/index.md) is very relevant here as well.
+The documentation for [firmware customization](../advanced/customization/index.md) is very relevant here as well.
 :::
 
 This is the recommended way to keep your Upsy Desky up-to-date, and allows you to customize it to your needs by editing the ESPHome config. If you have adopted your Upsy Desky into the dashboard automatically, it will come with a stock config. You can re-compile that configuration at any time to retrieve the latest version.
