--- a/docs/reference/schematics/index.mdx
+++ b/docs/reference/schematics/index.mdx
@@ -4,7 +4,7 @@ The schematics for the Upsy Desky are entirely open source and available for ref
 
 import KiCanvasViewer from '@site/src/components/KiCanvasViewer';
 
-You can explore the PCB and schematics design in the interactive viewers below.
+You can explore the PCB and schematics design in the interactive viewers below. (If you are having issues with the viewers, please try refreshing the page.)
 
 ## Schematics Viewer
 
