Add BYOE section

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -116,11 +116,4 @@ If you are having trouble with any of these steps, see [Troubleshooting](./troub
 
 ## Step 5: Print Enclosure (if you need to)
 
-If you didn't order a 3D-printed enclosure with your Upsy Desky, you can print your own. If you ordered from my Tindie shop, I have included the necessary mounting hardware for the PCB, but if you didn't, you will need:
-
-- 2 M3x4mm machine screws
-- 1 M2x4mm machine screw
-
-The necessary STL files are available from this GitHub repo, under [the enclosure directory](https://github.com/tjhorner/upsy-desky/tree/master/enclosure). Once printed, place the PCB in the case (it's a tight fit), screw it in, then snap the top on.
-
-At this point you can finalize the installation by sticking the Upsy Desky on the underside of your desk using the provided mounting adhesive (if you purchased an enclosure).
+If you didn't opt for an enclosure in your order, see the [BYOE page](./byoe.md) for instructions on how to print and assemble your own.
