--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -112,7 +112,7 @@ Plug one RJ45 jack into the control box, and the other into the keypad. Doesn't 
 
 Once your Upsy Desky has been integrated with Home Assistant, you can unplug the USB-C cable — the desk itself will provide power. Connect your Upsy Desky to your desk's control box using an RJ45 cable (it doesn't matter which jack you use), then after a minute or so check Home Assistant to see if you are able to control it properly. At this point you can also optionally connect the stock keypad to the open RJ45 jack on the Upsy Desky so you can use that as well.
 
-If you are having trouble with any of these steps, see [Troubleshooting](./troubleshooting.mdx).
+If you are having trouble with any of these steps, see [Troubleshooting](./troubleshooting/index.mdx).
 
 ## Step 5: Print Enclosure (if you need to)
 
