--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -14,16 +14,23 @@ If you don't see a Wi-Fi network starting with `upsy-desky` while the unit is po
 
 This is unfortunately a limitation of ESPHome — the [Wi-Fi configuration](https://esphome.io/components/wifi.html#configuration-variables) requires that `fast_connect` is enabled for hidden networks, but this cannot be enabled without setting a network in the configuration itself, so I cannot enable this for the stock firmware.
 
-Essentially, you will need to [adopt your Upsy Desky in the ESPHome dashboard](./advanced/customization/index.md) then modify the Wi-Fi configuration to have the `fast_connect` option.
+Essentially, you will need to [adopt your Upsy Desky in the ESPHome dashboard](../advanced/customization/index.md) then modify the Wi-Fi configuration to have the `fast_connect` option.
 
 ### The desk height is not being reported properly
 
 You may wish to try re-detecting the decoder to use:
 
 1. Press the up or down button on your desk's keypad briefly. This will wake up the control box.
-2. In Home Assistant or the web UI, press the [Re-Detect Decoder](./reference/entities.md#re-detect-decoder) button. This will cycle through each decoder and attempt to determine the correct one.
+2. In Home Assistant or the web UI, press the [Re-Detect Decoder](../reference/entities.md#re-detect-decoder) button. This will cycle through each decoder and attempt to determine the correct one.
 
 You can gain more insight into the process by [viewing the logs](#collecting-logs) before starting re-detection.
+
+If you encounter this issue multiple times, it may be worth adding the correct decoder in the firmware configuration so it no longer needs to detect it at every boot. Perform this process one more time, taking note of the decoder that is detected, then [add it to the firmware configuration](../advanced/customization/index.md) with these lines:
+
+```yaml
+substitutions:
+  standing_desk_variant: "YOUR_DECODER_HERE" # Replace this
+```
 
 If none of the decoders work, then your desk may use a protocol that is thus-far undiscovered. Please email support@tjhorner.dev and I will work with you to add support for your desk.
 
