Add note regarding support

--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -4,6 +4,16 @@ sidebar_position: 2
 
 # Troubleshooting & Support
 
+## Support
+
+If you are having issues with your Upsy Desky, help is available in several places:
+
+- The below troubleshooting guide covers many common issues
+- The [Discord server](https://discord.gg/ZHfXKQrSxF) is a great place to get help from me and the rest of the community
+- The [GitHub issues](https://github.com/tjhorner/upsy-desky/issues) might have the solution to a problem you're having
+
+Please do note that support is provided on a best-effort basis. I will of course assist in any way I can, but since this is not my full-time job I cannot guarantee that I will be able to help immediately or with every situation. If you are interested in a more formal support arrangement, please [contact me via email](mailto:biz@tjhorner.dev) and we can work something out. Thank you for understanding.
+
 ## Common Issues
 
 ### I don't see the Wi-Fi network during setup
