fix: remove trailingSlash configuration

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -116,4 +116,4 @@ If you are having trouble with any of these steps, see [Troubleshooting](./troub
 
 ## Step 5: Print Enclosure (if you need to)
 
-If you didn't opt for an enclosure in your order, see the [BYOE page](./byoe.md) for instructions on how to print and assemble your own.
+If you didn't opt for an enclosure in your order, see the [BYOE page](./byoe/index.md) for instructions on how to print and assemble your own.
