add new desk model and video

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -4,9 +4,11 @@ sidebar_position: 1
 
 # Getting Started
 
-This page will guide you through setting up your new Upsy Desky with your home automation system and your standing desk. It should take 5-10 minutes, but probably less.
+This page will guide you through setting up your new Upsy Desky with your home automation system and your standing desk. This will take less than ten minutes.
 
-**Do you have a kit?** You will need to solder the RJ45 jacks in place. They come snapped in for your convenience.
+If you prefer videos over text, this great one from [The Bearded Tech Guy](https://www.youtube.com/@BeardedTechGuy) will help you get started and provide some inspiration for Home Assistant automations!
+
+<iframe width="100%" style={{"aspect-ratio": "16 / 9"}} src="https://www.youtube.com/embed/VQLPu9XoKnA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Step 1: Connect to Wi-Fi
 
