replace support email address

--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -42,7 +42,7 @@ substitutions:
   standing_desk_variant: "YOUR_DECODER_HERE" # Replace this
 ```
 
-If none of the decoders work, then your desk may use a protocol that is thus-far undiscovered. Please email support@tjhorner.dev and I will work with you to add support for your desk.
+If none of the decoders work, then your desk may use a protocol that is thus-far undiscovered. You can check out the [reverse engineering guide](../advanced/reverse-engineering/index.md) to learn how to add support for your desk. If you run into any trouble, there are several people in the [Discord](https://discord.gg/ZHfXKQrSxF) who have experience with this process and can help you out.
 
 ### The stock keypad no longer shows the desk's height
 
